Add entity and block values

--- a/resources/META-INF/score_at.cfg
+++ b/resources/META-INF/score_at.cfg
@@ -1,3 +1,7 @@
 
 public net.minecraft.client.gui.Gui field_73735_i # zLevel
 public net.minecraft.client.gui.Gui zLevel
+
+public net.minecraft.entity.EntityList field_75625_b # stringToClassMapping
+public net.minecraft.entity.EntityList stringToClassMapping
+
